Alter Filter Form to avoid stack overflow
Alter Modal Window

Made minor change to Form.js

Made Upgrades to Modal window

Updated Static Data Table

Edited Modal Window and Attempted to Add Filter

Removed filter

--- a/htdocs/bootstrap/css/custom-css.css
+++ b/htdocs/bootstrap/css/custom-css.css
@@ -240,6 +240,45 @@ html, body {
     color: #c09853;
 }
 
+/* Necessary for swal2 while still with bootstrap v3 */
+.swal2-popup {
+  font-size: 1.6rem
+}
+
+.swal2-container {
+  z-index: 9999
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 700px;
+  box-shadow: 0 4px 8px 0 rbga(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
 /*
  *  CSS for Loris footer
  */
@@ -587,7 +626,7 @@ a.btn.btn-primary:hover {
 }
 
 .table-footer {
-    background-color: #E4EBF2;
+    background-color: #EDEDED;
 }
 
 #dynamictable {
